src/tests/testfiles/function-declarations/5.txt
Error at 4:1: Function definition parameters don't match with previous declaration
int f(int a, float b) {
^
